--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-viewer.html
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-viewer.html
@@ -3,8 +3,10 @@
     attributes='class="osdDocTableCell__dataField eui-textBreakAll eui-textBreakWord" style="vertical-align: middle;"' ; } %>
     <td <%=attributes %> data-test-subj="docTableField">
         <span class="osdDocTableCell__filter">
-            <button ng-click="openViewer()" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="margin-right: 10px;">
-              View DICOM
-            </button>
+            <button ng-click="openViewer()" id="search-button" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 45px; min-height: 45px; margin-right: 25px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="euiIcon euiIcon--medium euiIcon-isLoaded euiButtonIcon__icon">
+                    <path d="M15 12c0 1.654-1.346 3-3 3s-3-1.346-3-3 1.346-3 3-3 3 1.346 3 3zm9-.449s-4.252 8.449-11.985 8.449c-7.18 0-12.015-8.449-12.015-8.449s4.446-7.551 12.015-7.551c7.694 0 11.985 7.551 11.985 7.551zm-7 .449c0-2.757-2.243-5-5-5s-5 2.243-5 5 2.243 5 5 5 5-2.243 5-5z"/>
+                </svg>
+             </button>
         </span>
     </td>
