--- a/src/plugins/discover/public/application/angular/doc_table/components/viewer_modal/viewer_open_modal.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/viewer_modal/viewer_open_modal.scss
@@ -1,10 +1,11 @@
 .osdViewerOpenModal {
-  height: 800px;
+  height: 960px;
 }
 .iframe-container {
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 1200px;
+  height: 547px;
+  min-height: 340px;
   flex-direction: column;
   overflow: hidden;
 }
