--- a/src/plugins/discover/public/application/angular/doc_table/components/viewer_modal/viewer_open_modal.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/viewer_modal/viewer_open_modal.scss
@@ -1,10 +1,7 @@
-.osdViewerOpenModal {
-  height: 960px;
-}
 .iframe-container {
   display: flex;
-  width: 1200px;
-  height: 547px;
+  width: 100%;
+  height: 100%;
   min-height: 340px;
   flex-direction: column;
   overflow: hidden;
@@ -14,4 +11,17 @@
   border: 0;
   margin: 0;
   padding: 0;
+}
+#Overlay > div {
+  height: 95%;
+  width: 95%;
+  overflow: auto
+}
+#Modal {
+  height: 100%;
+  width: 100%;
+  overflow: auto
+}
+#Modal > div {
+  min-height: -webkit-fill-available;
 }
