add archive flow

--- a/src/plugins/discover/public/application/angular/doc_table/components/_index.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/_index.scss
@@ -1,3 +1,4 @@
 @import 'table_header';
 @import 'table_row/index';
 @import 'viewer_modal/viewer_open_modal';
+@import 'archiver_modal/archiver_open_modal';
