--- a/src/plugins/discover/public/application/angular/doc_table/components/archiver_modal/archiver_open_modal.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/archiver_modal/archiver_open_modal.scss
@@ -1,9 +1,15 @@
 .response {
     width: 400px;
 }
-.archive-link {
+.word-break {
     word-break: break-all;
 }
 .warning-expiration {
     margin-top: 10px;
+}
+p {
+    margin: 5px 0px 5px 0px
+}
+.generate-button {
+    margin-top: 5px;
 }
