beautify archive link

--- a/src/plugins/discover/public/application/angular/doc_table/components/archiver_modal/archiver_open_modal.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/archiver_modal/archiver_open_modal.scss
@@ -1,15 +1,16 @@
 .response {
-    width: 400px;
+  margin-top: 10px;
+  width: 400px;
 }
-.word-break {
-    word-break: break-all;
+.download-link {
+  font-size: 16px;
 }
 .warning-expiration {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 p {
-    margin: 5px 0px 5px 0px
+  margin: 5px 0px 5px 0px;
 }
 .generate-button {
-    margin-top: 5px;
+  margin-top: 5px;
 }
