--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/_cell.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/_cell.scss
@@ -47,3 +47,12 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+input[type=checkbox]
+{
+  -ms-transform: scale(1.3); /* IE */
+  -moz-transform: scale(1.3); /* FF */
+  -webkit-transform: scale(1.3); /* Safari and Chrome */
+  -o-transform: scale(1.3); /* Opera */
+  transform: scale(1.3);
+}
