--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
@@ -4,30 +4,30 @@
         <div style="display: flex; flex-direction: column; gap: 5px;">
             <div style="display: flex; flex-direction: row-reverse; gap: 5px;">
                 <button ng-click="openViewerInNewTab()" title="View DICOM in a new tab" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin-top: 6px;" width="18px" height="18px" viewBox="0 0 18 18" version="1.1">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 18 18" class="euiIcon euiButtonIcon__icon">
                         <path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 10.464844 9.628906 C 10.464844 10.699219 9.621094 11.570312 8.578125 11.570312 C 7.535156 11.570312 6.691406 10.699219 6.691406 9.628906 C 6.691406 8.554688 7.535156 7.679688 8.578125 7.679688 C 9.621094 7.679688 10.464844 8.554688 10.464844 9.628906 Z M 16.113281 9.332031 C 16.113281 9.332031 13.441406 14.8125 8.585938 14.8125 C 4.078125 14.8125 1.042969 9.332031 1.042969 9.332031 C 1.042969 9.332031 3.832031 4.4375 8.585938 4.4375 C 13.421875 4.4375 16.113281 9.332031 16.113281 9.332031 Z M 11.71875 9.628906 C 11.71875 7.839844 10.308594 6.386719 8.578125 6.386719 C 6.847656 6.386719 5.4375 7.839844 5.4375 9.628906 C 5.4375 11.414062 6.847656 12.867188 8.578125 12.867188 C 10.308594 12.867188 11.71875 11.414062 11.71875 9.628906 Z M 11.71875 9.628906 "/>
                         <path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 15.773438 5.894531 C 16.089844 5.894531 16.351562 5.628906 16.351562 5.308594 L 16.351562 2.21875 C 16.351562 1.902344 16.089844 1.640625 15.773438 1.640625 L 12.683594 1.640625 C 12.363281 1.640625 12.097656 1.902344 12.097656 2.21875 C 12.117188 2.652344 13.1875 2.8125 13.953125 3.144531 L 11.804688 5.296875 C 11.65625 5.445312 11.65625 5.6875 11.804688 5.835938 L 12.21875 6.253906 C 12.367188 6.402344 12.613281 6.402344 12.761719 6.253906 L 14.882812 4.128906 C 15.183594 4.875 15.332031 5.835938 15.773438 5.894531 Z M 15.773438 5.894531 "/>
                     </svg>
                 </button>
                 <button ng-click="openViewer()" title="View DICOM" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="euiIcon euiIcon--medium euiButtonIcon__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" class="euiIcon euiButtonIcon__icon">
                         <path d="M15 12c0 1.654-1.346 3-3 3s-3-1.346-3-3 1.346-3 3-3 3 1.346 3 3zm9-.449s-4.252 8.449-11.985 8.449c-7.18 0-12.015-8.449-12.015-8.449s4.446-7.551 12.015-7.551c7.694 0 11.985 7.551 11.985 7.551zm-7 .449c0-2.757-2.243-5-5-5s-5 2.243-5 5 2.243 5 5 5 5-2.243 5-5z"/>
                     </svg>
                 </button>
             </div>
             <div style="display: flex; flex-direction: row-reverse; gap: 5px;">
                 <button ng-click="editStudyTags()" ng-disabled="!isTagAvailable()" title="Edit Study Tags" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
-                    <svg mlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" class="euiIcon euiIcon--medium euiButtonIcon__icon">
+                    <svg mlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" class="euiIcon euiButtonIcon__icon">
                         <path d="M18 3h-5.7a2 2 0 0 0-1.4.6L3.6 11a2 2 0 0 0 0 2.8l6.6 6.6a2 2 0 0 0 2.8 0l7.4-7.5a2 2 0 0 0 .6-1.4V6a3 3 0 0 0-3-3Zm-2.4 6.4a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
                     </svg>
                 </button>
                 <button ng-click="editStudyComments()" ng-disabled="!isAvailableCommenting()" title="Edit Study Comments" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" class="euiIcon euiIcon--medium euiButtonIcon__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" class="euiIcon euiButtonIcon__icon">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="m3.99 16.854-1.314 3.504a.75.75 0 0 0 .966.965l3.503-1.314a3 3 0 0 0 1.068-.687L18.36 9.175s-.354-1.061-1.414-2.122c-1.06-1.06-2.122-1.414-2.122-1.414L4.677 15.786a3 3 0 0 0-.687 1.068zm12.249-12.63 1.383-1.383c.248-.248.579-.406.925-.348.487.08 1.232.322 1.934 1.025.703.703.945 1.447 1.025 1.934.058.346-.1.677-.348.925L19.774 7.76s-.353-1.06-1.414-2.12c-1.06-1.062-2.121-1.415-2.121-1.415z" fill="#ffffff"/>
                     </svg>
                 </button>
                 <button <%=attributes %> ng-click="downloadStudy()" title="Download Study Zip" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="euiIcon euiIcon--medium euiButtonIcon__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 26 26" class="euiIcon euiButtonIcon__icon">
                         <path d="M 0 13 L 8 13 L 8 -1 L 18 -1 L 18 13 L 26 13 L 13 26 L 0 13"/>
                     </svg>
                 </button>
