--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/_cell.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/_cell.scss
@@ -47,3 +47,8 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+input[type=checkbox]
+{
+  transform: scale(1.3);
+}
