--- a/src/plugins/discover/public/application/angular/doc_table/components/_index.scss
+++ b/src/plugins/discover/public/application/angular/doc_table/components/_index.scss
@@ -2,3 +2,4 @@
 @import 'table_row/index';
 @import 'viewer_modal/viewer_open_modal';
 @import 'archiver_modal/archiver_open_modal';
+@import 'report_modal/report_modal.scss';
