--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
@@ -14,6 +14,11 @@
                         <path style="fill:rgb(100%,100%,100%);" d="M15 12c0 1.654-1.346 3-3 3s-3-1.346-3-3 1.346-3 3-3 3 1.346 3 3zm9-.449s-4.252 8.449-11.985 8.449c-7.18 0-12.015-8.449-12.015-8.449s4.446-7.551 12.015-7.551c7.694 0 11.985 7.551 11.985 7.551zm-7 .449c0-2.757-2.243-5-5-5s-5 2.243-5 5 2.243 5 5 5 5-2.243 5-5z"/>
                     </svg>
                 </button>
+                <button ng-click="showReport()" ng-show="isAvailableReport()" title="View NLP Report" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
+                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 20">
+                        <path stroke="currentColor" stroke-width="2" d="M10 3v4a1 1 0 0 1-1 1H5m4 8h6m-6-4h6m4-8v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V7.914a1 1 0 0 1 .293-.707l3.914-3.914A1 1 0 0 1 9.914 3H18a1 1 0 0 1 1 1Z"/>
+                    </svg>
+                </button>
             </div>
             <div style="display: flex; flex-direction: row-reverse; gap: 5px;">
                 <button ng-click="editStudyTags()" ng-disabled="!isTagAvailable()" title="Edit Study Tags" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
@@ -21,7 +26,7 @@
                         <path d="M18 3h-5.7a2 2 0 0 0-1.4.6L3.6 11a2 2 0 0 0 0 2.8l6.6 6.6a2 2 0 0 0 2.8 0l7.4-7.5a2 2 0 0 0 .6-1.4V6a3 3 0 0 0-3-3Zm-2.4 6.4a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
                     </svg>
                 </button>
-                <button ng-click="editStudyComments()" ng-disabled="!isAvailableCommenting()" title="Edit Study Comments" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
+                <button ng-click="editStudyComments()" ng-disabled="!isCommentingAvailable()" title="Edit Study Comments" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none" class="euiIcon euiButtonIcon__icon">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="m3.99 16.854-1.314 3.504a.75.75 0 0 0 .966.965l3.503-1.314a3 3 0 0 0 1.068-.687L18.36 9.175s-.354-1.061-1.414-2.122c-1.06-1.06-2.122-1.414-2.122-1.414L4.677 15.786a3 3 0 0 0-.687 1.068zm12.249-12.63 1.383-1.383c.248-.248.579-.406.925-.348.487.08 1.232.322 1.934 1.025.703.703.945 1.447 1.025 1.934.058.346-.1.677-.348.925L19.774 7.76s-.353-1.06-1.414-2.12c-1.06-1.062-2.121-1.415-2.121-1.415z" fill="#ffffff"/>
                     </svg>
