--- a/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
+++ b/src/plugins/discover/public/application/angular/doc_table/components/table_row/cell-actions.html
@@ -14,7 +14,7 @@
                         <path style="fill:rgb(100%,100%,100%);" d="M15 12c0 1.654-1.346 3-3 3s-3-1.346-3-3 1.346-3 3-3 3 1.346 3 3zm9-.449s-4.252 8.449-11.985 8.449c-7.18 0-12.015-8.449-12.015-8.449s4.446-7.551 12.015-7.551c7.694 0 11.985 7.551 11.985 7.551zm-7 .449c0-2.757-2.243-5-5-5s-5 2.243-5 5 2.243 5 5 5 5-2.243 5-5z"/>
                     </svg>
                 </button>
-                <button ng-click="showReport()" ng-show="isAvailableReport()" title="View NLP Report" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
+                <button ng-click="showReport()" ng-show="isAvailableNLPReport()" title="View NLP Report" class="euiButton euiButton--primary euiSuperUpdateButton euiButton--fill" style="min-width: 40px; min-height: 40px;">
                     <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 20">
                         <path stroke="currentColor" stroke-width="2" d="M10 3v4a1 1 0 0 1-1 1H5m4 8h6m-6-4h6m4-8v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V7.914a1 1 0 0 1 .293-.707l3.914-3.914A1 1 0 0 1 9.914 3H18a1 1 0 0 1 1 1Z"/>
                     </svg>
